<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tugas.CustomLayoutBiasa">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/struk_pembayaran"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/masukan_barang"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukan_barang"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/masukan_jumlah"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukan_jumlah"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/masukan_harga"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukan_harga_barang"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/prosesnya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hitung"/>

    <TextView
        android:id="@+id/hasil_semua"
        android:text="@string/belum_ada_data"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>